# sage-kb

./: .coverage  .env.example  .gitattributes  .gitignore  .output.txt  .pre-commit-config.yaml  CHANGELOG.MD  CHANGELOG.md  CONTRIBUTING.MD  CONTRIBUTING.md  INDEX.MD  INDEX.md  Makefile  README.MD  README.md  aikb.yaml  environment.yml  features.yaml  index.md  justfile  pyproject.toml  sage.yaml  server.py  test_graph.json  ultimate_design_final.md
.archive/: INDEX.MD  INDEX.md  index.md  ultimate_design_final.md
.archive/design/: ULTIMATE_DESIGN_FINAL.MD  ULTIMATE_DESIGN_FINAL.md
.archive/design_history/: ai_collab_kb_ultimate_design.md  ai_collaboration.md  api_reference.md  config_reference.md  design.md  level5_expert_committee_ultimate_design.md  roadmap.md  technical_spec.md  testing_spec.md  ultimate_design_99_score.md  unified_final_design.md  unified_ultimate_design.md
.context/: INDEX.MD  INDEX.md  index.md
.context/configurations/: loading_configurations.md  memory_settings.md  runtime_settings.md
.context/conventions/: CODE_PATTERNS.MD  CODE_PATTERNS.md  DIRECTORY_STRUCTURE.md  DOC_TEMPLATE.md  FILE_STRUCTURE.MD  FILE_STRUCTURE.md  FOUR_LAYER_MODEL.md  INDEX.md  NAMING.MD  NAMING.md  code_patterns.md  file_structure.md  naming.md
.context/decisions/: ADR-0001-ARCHITECTURE.MD  ADR-0001-architecture.md  ADR-0002-SAGE-PROTOCOL.MD  ADR-0002-sage-protocol.md  ADR-0003-TIMEOUT-HIERARCHY.MD  ADR-0003-timeout-hierarchy.md  ADR-0004-DEPENDENCY-INJECTION.MD  ADR-0004-dependency-injection.md  ADR-0005-EVENT-BUS.MD  ADR-0005-event-bus.md  ADR-0006-PROTOCOL-FIRST.MD  ADR-0006-protocol-first.md  ADR-0007-CONFIGURATION.MD  ADR-0007-configuration.md  ADR-0008-PLUGIN-SYSTEM.MD  ADR-0008-plugin-system.md  ADR_0001_ARCHITECTURE.md  ADR_0002_SAGE_PROTOCOL.md  ADR_0003_TIMEOUT_HIERARCHY.md  ADR_0004_DEPENDENCY_INJECTION.md  ADR_0005_EVENT_BUS.md  ADR_0006_PROTOCOL_FIRST.md  ADR_0007_CONFIGURATION.md  ADR_0008_PLUGIN_SYSTEM.md  INDEX.md
.context/intelligence/: INDEX.md  calibration.md  cases.md  common_pitfalls.md  lessons_learned.md  optimizations.md  patterns.md  performance_tuning.md  session_automation_requirements.md
.context/overview/: INDEX.md  PROJECT_OVERVIEW.MD  PROJECT_OVERVIEW.md  project_overview.md
.context/policies/: INDEX.md  LOADING_CONFIGURATIONS.MD  LOADING_CONFIGURATIONS.md  MEMORY_SETTINGS.MD  MEMORY_SETTINGS.md  PLUGIN_SETTINGS.MD  PLUGIN_SETTINGS.md  RUNTIME_SETTINGS.MD  RUNTIME_SETTINGS.md  SERVICE_SETTINGS.MD  SERVICE_SETTINGS.md  TIMEOUT_HIERARCHY.MD  TIMEOUT_HIERARCHY.md  loading_configurations.md  memory_settings.md  plugin_settings.md  runtime_settings.md  service_settings.md  timeout_hierarchy.md
.github/: PULL_REQUEST_TEMPLATE.MD  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.MD  FEATURE_REQUEST.MD  feature_request.md
.github/workflows/: ci.yml  doc-quality.yml  docs-check.yml  release.yml  validate-knowledge.yml
.history/: INDEX.MD  INDEX.md  _SESSION-END-CHECKLIST.MD  _SESSION-END-CHECKLIST.md  _session-end-checklist.md  index.md
.history/conversations/: .gitkeep  2025-11-30-JUNIE-TEMPLATE-OPTIMIZATION.MD  2025-11-30-KNOWLEDGE-REORGANIZATION.MD  2025-11-30-KNOWLEDGE-STANDARDS-SUMMARY.MD  2025-11-30-junie-template-optimization.md  2025-11-30-knowledge-reorganization.md  2025-11-30-knowledge-standards-summary.md  20251130-JUNIE-TEMPLATE-OPTIMIZATION.md  20251130-KNOWLEDGE-REORGANIZATION.md  20251130-KNOWLEDGE-STANDARDS-SUMMARY.md  _EXAMPLE-2025-11-29-HISTORY-COMPLETENESS-REVIEW.MD  _EXAMPLE-20251129-HISTORY-COMPLETENESS-REVIEW.md  _example-2025-11-29-history-completeness-review.md
.history/current/: .gitkeep  _EXAMPLE-SESSION-20251129-2214.MD  _EXAMPLE-SESSION-20251129-2214.md  _example-session-20251129-2214.md
.history/handoffs/: .gitkeep  _EXAMPLE-2025-11-29-HISTORY-ENHANCEMENT-HANDOFF.MD  _EXAMPLE-20251129-HISTORY-ENHANCEMENT-HANDOFF.md  _example-2025-11-29-history-enhancement-handoff.md
.junie/: GUIDELINES.MD  README.MD  README.md  guidelines.md
.junie/configuration/: 01-introduction.md  02-action-allowlist.md  03-mcp-integration.md  04-future-vision.md  05-appendix.md  README.md
.junie/docs/: 01-introduction.md  02-action-allowlist.md  03-mcp-integration.md  04-future-vision.md  05-appendix.md  06-migration-guide.md  07-memory-best-practices.md  08-efficiency-metrics.md  09-operations-guide.md  10-glossary.md  README.MD  README.md
.junie/generic/: INDEX.md  QUICKREF.MD  QUICKREF.md  config.yaml  quickref.md
.junie/mcp/: mcp.json
.junie/project/: GUIDELINES.md  INDEX.md  QUICKREF.MD  QUICKREF.md  config.yaml  quickref.md
.knowledge/: INDEX.MD  INDEX.md  VERSION.MD  VERSION.md  index.md
.knowledge/core/: DEFAULTS.MD  DEFAULTS.md  INDEX.MD  PRINCIPLES.MD  PRINCIPLES.md  QUICK_REFERENCE.MD  QUICK_REFERENCE.md  defaults.md  index.md  principles.md  quick_reference.md
.knowledge/frameworks/: INDEX.MD  INDEX.md  index.md
.knowledge/guidelines/: AI_COLLABORATION.MD  AI_COLLABORATION.md  CODE_STYLE.MD  CODE_STYLE.md  COGNITIVE.MD  COGNITIVE.md  DOCUMENTATION.MD  DOCUMENTATION.md  ENGINEERING.MD  ENGINEERING.md  INDEX.MD  INDEX.md  PLANNING.MD  PLANNING.md  PYTHON.MD  PYTHON.md  QUALITY.MD  QUALITY.md  QUICK_START.MD  QUICK_START.md  SECURITY.MD  SECURITY.md  SHELL.MD  SHELL.md  SQL.MD  SQL.md  SUCCESS.MD  SUCCESS.md  TYPESCRIPT.MD  TYPESCRIPT.md  index.md  (+14 more)
config/: INDEX.MD  INDEX.md  autonomy.yaml  cli.yaml  content.yaml  di.yaml  documentation.yaml  features.yaml  guidelines.yaml  index.md  loading.yaml  logging.yaml  mcp.yaml  memory.yaml  plugins.yaml  quality.yaml  sage.yaml  search.yaml  timeout.yaml  token_budget.yaml  triggers.yaml
content/: index.md
docs/: INDEX.MD  index.md
scripts/: README.md  add_metadata.py  validate_knowledge.py
templates/: adr.md  convention.md  guide.md  practice.md
tests/: README.MD  README.md  test_cli.py  test_loader.py  test_mcp_server.py  test_performance.py  test_timeout_manager.py
tools/: README.MD  README.md  __init__.py  check_links.py  check_mece_boundaries.py  index_maintainer.py  migration_toolkit.py  timeout_manager.py  validate_knowledge.py
(+902 files in other folders)
