[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sage-kb"
version = "0.1.0"
description = "SAGE: AI Collaboration Knowledge Base"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "SAGE AI Collab Team" }
]
keywords = [
    "ai",
    "collaboration",
    "knowledge-base",
    "mcp",
    "timeout",
    "cli",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "typer>=0.9.0",
    "rich>=13.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
    "httpx>=0.25",
    "uvicorn>=0.22",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
all = [
    "sage-kb[mcp,dev]",
]

[project.urls]
Homepage = "https://github.com/HengYangDS/sage-kb"
Documentation = "https://github.com/HengYangDS/sage-kb#readme"
Repository = "https://github.com/HengYangDS/sage-kb"
Issues = "https://github.com/HengYangDS/sage-kb/issues"

[project.scripts]
sage = "sage.services.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sage"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/content",
    "/tools",
    "/index.md",
    "/sage.yaml",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=sage --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by ruff format)
    "E402",  # module level import not at top of file (intentional in some modules)
    "B008",  # don't perform function calls in argument defaults
    "B027",  # empty method in abstract base class (intentional for optional hooks)
    "E741",  # ambiguous variable name (allow 'l' in list comprehensions)
    "F841",  # local variable assigned but never used (allow in some cases)
]

[tool.ruff.lint.isort]
known-first-party = ["sage"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/sage"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# ===========================================================================
# Bandit - Security Linter
# ===========================================================================
[tool.bandit]
exclude_dirs = ["tests", "tools"]
skips = ["B101"]  # Skip assert warnings (used in tests)

# ===========================================================================
# Commitizen - Conventional Commits
# ===========================================================================
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version",
    "src/sage/__init__.py:__version__",
]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
